# webinar-open-unit-test-mock

./: .clang-format  .gitignore  CMakeLists.txt  README.md  install.cmd  install.sh
.github/workflows/: test.yml
db/: docker-compose.yml
db/pq/: init.sql
src/: book.hpp  book_test.cpp  book_test_simple.cpp  database.hpp  database_mock.hpp  fwd.hpp  librarian.cpp  librarian.hpp  librarian_mock.hpp  librarian_test.cpp  main.cpp  main_simple.cpp  pqdatabase.cpp  pqdatabase.hpp  reader.hpp  reader_test.cpp  request.cpp  request.hpp  request_test.cpp
